--- a/projects/game-jam-2018---2d-platformer/manifest.json
+++ b/projects/game-jam-2018---2d-platformer/manifest.json
@@ -1,7 +1,7 @@
 {
   "id": "CNNj",
   "name": "Game Jam 2018 - 2D Platformer",
-  "description": "",
+  "description": "Main game project",
   "systemId": "game",
   "formatVersion": 6
 }
