--- a/projects/game-jam-2018---scratch/manifest.json
+++ b/projects/game-jam-2018---scratch/manifest.json
@@ -1,7 +1,7 @@
 {
   "id": "LBiX",
   "name": "Game Jam 2018 - Scratch",
-  "description": "",
+  "description": "Sandbox",
   "systemId": "game",
   "formatVersion": 6
 }
